# mqt-yaqs

./: .gitignore  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README.md  TODO_long_range_crosstalk.md  UPGRADING.md  noxfile.py  pyproject.toml  requirements.txt  setup.py  sitecustomize.py
.cursor/rules/: newchat.mdc
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  codecov.yml  contributing.md  pull_request_template.md  release-drafter.yml  renovate.json5  support.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  main.yml  release-drafter.yml  templating.yml
Max/: 50LHeisenbergExp.py  Dynamic_TN_MCWF.py  HeisenbergEasyVersion.py  MCWF.py  Modified_MENDL_TwoSiteTDVP.py  TN_MCWF.py  canonical_forms.py  classes.py  commutators.py  deprecated_Mendl_MCWF.py  initializations.py  lindblad.input.txt  lindblad.log.txt  metrics.py  models.py  old_tests.py  operations.py  pickle_test.py  simulation_parameters.py  superoperator.py  tensor_products.py  tests_deprecated.py  tjm_scikit_tt.py  toy_model_deprecated.py  updated_tests.py  vector_MCWF.py
docs/: conf.py  contributing.md  development_guide.md  index.md  installation.md  lit_header.bib  references.md  refs.bib
docs/_templates/: page.html
docs/examples/: analog_simulation.md  equivalence_checking.md  fermi_hubbard_simulation.md  mid_measurement_digital_tjm.md  physics_simulation.md  sample_observable_digital_tjm.md  strong_circuit_simulation.md  transmon_emulation.md  weak_circuit_simulation.md
examples/: 10_site_Ising.py  1_Noisy_Ising_Model.py  1_Physics_Simulation.py  1_physics_simulation.py  2_Equivalence_Checking.py  3_Circuit_Simulation.py  3_Shots_Simulator.py  3_Weak_Simulation.py  3_weak_circuit_simulation.py  4_Circuit_Simulator.py  4_Strong_Simulation.py  4_strong_circuit_simulation.py  5_Benchmarker.py  6_Fermi_Hubbard_Circuit.py  7_Fermi_Hubbard_Simulator.py  8_Fermi_Hubbard_site_occupation.py  Y_bug_test_max.py  __init__.py  auto_mpo.py  ex1_physics_simulation.py  ex2_strong_circuit_simulation.py  ex4_equivalence_checking.py
experiments/: sandbox,py
experiments/CircuitTDVP_Paper/: bond_dim_test.py  correlator_error.py  main.py  supp_bond_dim_test.py
experiments/CircuitTDVP_Paper/bond_dimension/: bond_dim_utils.py  bond_dimension.ipynb
experiments/CircuitTDVP_Paper/correlator/: trotter_1d_heisenberg.ipynb  trotter_periodic_heisenberg.ipynb  trotter_periodic_ising.ipynb
experiments/Gammas/: plotter.py
experiments/Gammas/dephasing/: 100L_T10_wall.pickle  100L_T5_wall.pickle
experiments/Gammas/fixer/: 100L_T10_wall_mini.pickle  100L_T1_wall_mini.pickle
experiments/Large_Scale/: 500L_T10.pickle  Heisenberg_Noise_QPT.py  plotter copy.py  plotter.py
experiments/Large_Scale/X_measurements/: 100L_T1.pickle  100L_T10.pickle  100L_T5.pickle
experiments/Large_Scale/Z_measurements/: 100L_T1.pickle  100L_T10.pickle  100L_T5.pickle
experiments/Large_Scale2/: plotter.py
experiments/MPDO/: 30L_NoNoise.pickle  30L_Noise.pickle  Heisenberg_TimeEvolution.py  plotter_MPDO.py
experiments/MPDO_Wall/: plotter_MPDO.py
experiments/New/bond_dimension/: plotter_bond_dim.py  test.py
experiments/New/convergence/: convergence_test.py  plotter_convergence_single_plot.py
experiments/Paper1/MPDO/: plotter_MPDO.py  test.py
experiments/Paper1/bond_dimension/: plotter_bond_dim.py  test.py
experiments/Paper1/convergence/: plotter_convergence.py  plotter_convergence_horizontal.py  plotter_convergence_single_plot.py  test.py
experiments/QCEC_Paper/: comparison_methods_GateError.py  comparison_methods_Lin.py  comparison_methods_PhaseError.py  permutation_error_Lin.py  phase_error_Lin.py
experiments/QCEC_Paper/SVD_Behavior/: plotter_svd.py
experiments/QCEC_Paper/error_injection_new/: DD.p  TN1.p  TN1_permutation.p  TN1_phase.p  TN3.p  TN3_permutation.p  TN3_phase.p  TN6.p  TN6_permutation.p  TN6_phase.p  circuit_generator.py  error_circuits.qpy  error_circuits_transpiled.qpy  error_injection_Lin_new.py  permutation_error_Lin_new.py  phase_error_Lin_new.py  plotter.py  plotter_variance.py
experiments/QCEC_Paper/scaling_Equivalence_New/: DD_Full.p  DD_SCA.p  TN_Full.p  TN_Lin.p  TN_SCA.p  ZX_Full.p  ZX_Lin.p  ZX_SCA.p  comparison_methods_Lin.py  plotter.py  plotter_variance.py
experiments/QCEC_Paper/scaling_NonEquivalence/: DD0.p  DD1.p  DD10.p  DD10_permutation.p  DD1_permutation.p  DD1e-1.p  DD1e-2.p  (+16 more)
experiments/cost/: cost_test.ipynb
scripts/: FH_circuit_qiskit_vs_yaqs.ipynb  bond_dimension_convergence.py  correlator_error.py  fidelity_error.ipynb  fidelity_error_2d.ipynb  fidelity_error_periodic.ipynb  helper.py  large_scale.py  main.py  monte_carlo_convergence.py  mpdo_comparison.py  noise_comparison.py
scripts/bond_dimension/: bond_dimension copy.ipynb  bond_dimension.ipynb  helper.py
scripts/correlator/: correlator_utils.py  trotter_1d_heisenberg.ipynb  trotter_2d_ising.ipynb  trotter_periodic_heisenberg.ipynb
scripts/observable/: helper.py  observable_error.ipynb  observable_error_2d.ipynb  observable_error_periodic.ipynb
scripts/trotter/: correlator_utils.py  helper.py  helper_single_gate.py  trotter_1d_heisenberg.ipynb  trotter_2d_ising.ipynb  trotter_periodic_heisenberg.ipynb  trotter_periodic_ising.ipynb
src/: __init__.py
src/yaqs/: Simulator.py  __init__.py
tests/: __init__.py  test_CircuitTJM.py  test_PhysicsTJM.py  test_Simulator.py  test_TDVP.py  test_circuit_library.py  test_dag_utils.py  test_dissipation.py  test_dynamic_TDVP.py  test_equivalence_checking.py  test_gate_library.py  test_matrix_exponential.py  test_mpo_utils.py  test_networks.py  test_noise_model.py  test_operations.py  test_simulation_parameters.py  test_simulator.py
tests/analog/: test_analog_tjm.py
tests/circuits/: __init__.py  test_CircuitTJM.py  test_benchmarker.py  test_circuit_tjm.py  test_equivalence_checking.py
tests/core/: __init__.py
tests/digital/: circuit.qasm  test_digital_tjm.py  test_equivalence_checking.py
tests/physics/: __init__.py  test_PhysicsTJM.py  test_physics_tjm.py
(+295 files in other folders)
