[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mqt-yaqs"
description = "A Tool for Simulating Open Quantum Systems, Noisy Quantum Circuits, and Realistic Quantum Hardware"
license = "MIT"
authors = [
  { name="Aaron Sander", email = "aaron.sander@tum.de" },
]
maintainers = [
  { name="Lukas Burgholzer", email = "burgholzer@me.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
keywords = ["MQT", "quantum-computing", "quantum-simulation", "tensor-networks"]

dependencies = [
    "numpy>=2.1; python_version >= '3.13'",
    "numpy>=1.26; python_version >= '3.12'",
    "numpy>=1.24; python_version >= '3.11'",
    "numpy>=1.22.4",
    "scipy>=1.13.1",
    "scipy>=1.14.1; python_version >= '3.13'",
    "qiskit>=1.0.0",
    "qiskit>=1.3.0; python_version >= '3.13'",
    "opt-einsum>=3.4.0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/cda-tum/mqt-yaqs"
Documentation = "https://mqt.readthedocs.io/projects/yaqs"
Issues = "https://github.com/cda-tum/mqt-yaqs/issues"
Discussions = "https://github.com/cda-tum/mqt-yaqs/discussions"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/mqt"]

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    # Qiskit 1.3 deprecations
    'ignore:.*``qiskit.dagcircuit.dagcircuit.DAGCircuit.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
]
log_cli_level = "info"
testpaths = ["tests"]
